@@ -1,5 +1,4 @@
-<?php use_javascript('/sfMediaBrowserPlugin/js/FilePicker.js') ?>
-<?php use_javascript('/sfMediaBrowserPlugin/js/popup.js') ?>
+<?php sfMediaBrowserUtils::loadAssets('filepicker') ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
